devel
-----

* fixed internal issuel #3546: improved the shards view in the web ui if there
  is only one shard to display.

* fixed internal issue #3789: restricted the allowed query names for user
  defined custom queries within the web ui.
  
* upgraded bundled RocksDB version to 6.0


* added "--log.ids" option to arangod

  The default value for this option is `true`. Setting the option to `false`
  will prevent embedding unique log ids into all log messages generated by
  ArangoDB C++ code. The unique ids allow for easy access to the location in
  the source code from which a message originates. This should help customers
  to configure custom monitoring/alerting based on specific log id occurrences
  and will also be helpful for support and development in identifying problems.

* fixed issue #8294: wrong equals behaviour on arrays with ArangoSearch

* fixed internal issue #528: ArangoSearch range query sometimes doesn't work
  correctly with numeric values

* changed type of the startup option `--rocksdb.recycle-log-file-num` from 
  numeric to boolean, as this is also the type the options has in the RocksDB
  library.

* renamed hidden startup option `--rocksdb.delayed_write_rate` to the more
  consistent `--rocksdb.delayed-write-rate`. When the old option name is
  used, the arangod startup will be aborted with a descriptive error message.

* if not explicitly configured, make agency nodes start removing their unused 
  WAL files a few seconds after the completed server startup already. This is
  because on agency nodes, unused WAL files do not need to be retained for
  potential replication clients to read them. 

* added option `--all-databases` to arangodump and arangorestore

  When set to true, this makes arangodump dump all available databases
  the current user has access to. The option `--all-databases` cannot be
  used in combination with the option `--server.database`. 

  When `--all-databases` is used, arangodump will create a subdirectory