@@ -1,6 +1,10 @@
 devel
 -----
 
+* internal issue #2276: fixed the sorting of the databases in the database 
+  selection dropdown in the web ui. The sort order differed based on whether
+  authentication was enabled or disabled.
+
 * fixed internal issuel #3546: improved the shards view in the web ui if there
   is only one shard to display.
 
@@ -8,7 +12,6 @@ devel
   defined custom queries within the web ui.
   
 * upgraded bundled RocksDB version to 6.0
-
 
 * added "--log.ids" option to arangod
 
